Added login and other components

--- a/src/app/pages/overview/overview.component.html
+++ b/src/app/pages/overview/overview.component.html
@@ -1,1 +1,22 @@
-<p>overview works!</p>
+<div class="overview-component-wrapper">
+  <div class="logo-wrapper">
+    <h1>PovioSpace</h1>
+  </div>
+  <div class="overview-actions-wrapper">
+    <div class="search-actions">
+      <button mat-flat-button color="primary" (click)="openDocumentDialog()">
+        <mat-icon>add</mat-icon>
+        Add
+      </button>
+      <mat-form-field class="search-field">
+        <input matInput placeholder="Search">
+        <mat-icon color="primary" matSuffix>search</mat-icon>
+      </mat-form-field>
+    </div>
+    <div class="filter-actions">
+
+    </div>
+  </div>
+  <div class="feed-wrapper">
+  </div>
+</div>
