--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,10 +33,22 @@ $povio-app-theme: mat.define-dark-theme(
 }
 
 html, body {
-  height: 100dvh;
 }
 
 body {
   margin: 0;
   font-family: 'Mulish', sans-serif;
+  background: #212121;
+}
+
+button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 0.25rem;
+}
+
+.mat-mdc-form-field-subscript-wrapper {
+  display: none !important;
 }
