--- a/src/app/pages/overview/add-document/add-document.component.html
+++ b/src/app/pages/overview/add-document/add-document.component.html
@@ -1,3 +1,32 @@
-<h2 mat-dialog-title>{{passedDocument ? passedDocument?.title : 'Add document'}}</h2>
-<mat-dialog-content>
+<mat-dialog-content *ngIf="filePresent">
+  <div class="main-document-container">
+    <div class="document-title">
+      <h2 *ngIf="passedDocument">{{passedDocument.title}}</h2>
+      <div class="document-description">
+        <p>{{passedDocument?.description}}</p>
+      </div>
+      <mat-chip>{{lastModifiedBy.username}} | {{passedDocument?.last_modified | date: 'dd.MM.yyyy.'}}</mat-chip>
+    </div>
+  </div>
+</mat-dialog-content>
+<mat-dialog-content *ngIf="!filePresent">
+  <div class="main-document-container">
+    <div class="document-title">
+      <mat-form-field>
+        <input matInput placeholder="Title">
+      </mat-form-field>
+    </div>
+    <div class="document-description">
+      <mat-form-field>
+        <textarea matInput placeholder="Description"></textarea>
+      </mat-form-field>
+    </div>
+    <div class="dialog-actions">
+      <mat-chip>{{currentDate | date: 'dd.MM.yyyy'}}</mat-chip>
+      <button mat-flat-button color="primary">
+        <mat-icon>save</mat-icon>
+        Save
+      </button>
+    </div>
+  </div>
 </mat-dialog-content>
