--- a/src/app/pages/overview/overview.component.html
+++ b/src/app/pages/overview/overview.component.html
@@ -1,36 +1,134 @@
 <div class="overview-component-wrapper">
   <div class="logo-wrapper">
-    <h1>PovioSpace</h1>
+    <img src="assets/povio-logo.png" class="povio-logo" alt="logo">
   </div>
   <div class="overview-actions-wrapper">
     <div class="search-actions">
-      <button mat-flat-button color="primary" (click)="openDocumentDialog()">
+      <button mat-flat-button color="primary" [matMenuTriggerFor]="menu">
         <mat-icon>add</mat-icon>
-        Add
+        New
       </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item *ngFor="let option of typeOfUpload" (click)="formPanel.open()">
+          <mat-icon>{{option.icon}}</mat-icon>
+          {{option.displayName}}
+        </button>
+      </mat-menu>
       <mat-form-field class="search-field">
         <input matInput placeholder="Search" #documentSearch (input)="onKeyUp(documentSearch.value)">
         <mat-icon color="primary" matSuffix>search</mat-icon>
       </mat-form-field>
     </div>
+    <mat-expansion-panel #formPanel hideToggle>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Upload form
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <form action="" [formGroup]="addDocumentForm">
+        <div class="main-document-container">
+          <div class="document-title">
+            <mat-form-field>
+              <mat-label>Title</mat-label>
+              <input matInput formControlName="title">
+            </mat-form-field>
+          </div>
+          <div class="document-description">
+            <mat-form-field>
+              <mat-label>Description</mat-label>
+              <textarea matInput formControlName="description"></textarea>
+            </mat-form-field>
+          </div>
+          <div class="user-role">
+            <mat-form-field>
+              <mat-label>Tag</mat-label>
+              <mat-select [(value)]="selectedUserRole" formControlName="tag">
+                <mat-option *ngFor="let role of userRoles" [value]="role.value">
+                  {{role?.displayValue}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div class="dialog-actions">
+            <button mat-flat-button color="primary">
+              <mat-icon>save</mat-icon>
+              Post
+            </button>
+          </div>
+        </div>
+      </form>
+    </mat-expansion-panel>
     <div class="filter-actions">
       <mat-form-field>
-        <mat-select [(value)]="selectedUserRole" (selectionChange)="filterDocumentsByTag()" placeholder="User role">
+        <mat-select [(value)]="selectedTag" (selectionChange)="filterDocumentsByTag()" placeholder="User role">
           <mat-option [value]="'ALL'"><b><i>Clear</i></b></mat-option>
           <mat-option *ngFor="let userRole of userRoles" [value]="userRole.value">
-            {{userRole.displayName}}
+            {{userRole.displayValue}}
           </mat-option>
         </mat-select>
       </mat-form-field>
     </div>
   </div>
   <div class="feed-wrapper">
-    <div class="file-card" *ngFor="let file of uploadedFiles" (click)="openDocumentDialog(file)">
-      <h2>{{file.title}}</h2>
-      <div class="file-description-short">
-        <p>{{file.description}}</p>
-      </div>
-      <mat-chip [ngStyle]="{'background': getColorByTag(file.tag)}">{{file.tag}}</mat-chip>
-    </div>
+    <mat-tab-group mat-stretch-tabs>
+      <mat-tab label="Solutions" autofocus>
+        <div class="file-card" *ngFor="let file of uploadedFiles" (click)="openDocumentDialog(file)">
+          <div class="file-header">
+            <div class="main-header">
+              <div class="file-title">
+                <h2>{{file.title}}</h2>
+                <mat-chip [ngStyle]="{'background': getColorByTag(file.category)}"><b>{{file.category}}</b></mat-chip>
+              </div>
+              <div class="file-actions">
+                <p>
+                  <mat-icon>maps_ugc</mat-icon>
+                  {{file.numberOfComments}}
+                </p>
+                <p>
+                  <mat-icon>thumb_up</mat-icon>
+                  {{file.numberOfUpVotes}}
+                </p>
+              </div>
+            </div>
+            <div class="user-info">
+              <p><b>{{file.author}}</b></p>
+              <p>Last modified on: {{file.lastModified}}</p>
+            </div>
+          </div>
+          <div class="file-description-short">
+            <p>{{file.description}}</p>
+          </div>
+        </div>
+      </mat-tab>
+      <mat-tab label="Problems">
+        <div class="file-card" *ngFor="let file of uploadedFiles" (click)="openDocumentDialog(file)">
+          <div class="file-header">
+            <div class="main-header">
+              <div class="file-title">
+                <h2>{{file.title}}</h2>
+                <mat-chip [ngStyle]="{'background': getColorByTag(file.category)}"><b>{{file.category}}</b></mat-chip>
+              </div>
+              <div class="file-actions">
+                <p>
+                  <mat-icon>maps_ugc</mat-icon>
+                  {{file.numberOfComments}}
+                </p>
+                <p>
+                  <mat-icon>thumb_up</mat-icon>
+                  {{file.numberOfUpVotes}}
+                </p>
+              </div>
+            </div>
+            <div class="user-info">
+              <p><b>{{file.author}}</b></p>
+              <p>Last modified on: {{file.lastModified}}</p>
+            </div>
+          </div>
+          <div class="file-description-short">
+            <p>{{file.description}}</p>
+          </div>
+        </div>
+      </mat-tab>
+    </mat-tab-group>
   </div>
 </div>
