--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -4,19 +4,39 @@
   height: 100dvh;
   width: 100%;
   display: flex;
+  flex-direction: column;
+  gap: 2rem;
   justify-content: center;
   align-items: center;
+
+  .image-wrapper {
+    width: 50%;
+    border-bottom: 1px solid #333;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      width: 20%;
+    }
+  }
 
   .login-card {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: $secondary-color;
+    background: #E0E0E0;
     padding: 2rem;
     border-radius: 6px;
     gap: 1rem;
     width: 20rem;
+
+    a {
+      text-decoration: none;
+      color: #333;
+    }
 
     form {
       display: flex;
