--- a/src/app/pages/overview/add-document/add-document.component.scss
+++ b/src/app/pages/overview/add-document/add-document.component.scss
@@ -9,6 +9,18 @@
   .document-description, .document-title {
     width: 100%;
 
+    .file-info {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 0.5rem;
+    }
+
+    p {
+      outline: none;
+    }
+
     .header-wrapper {
       width: 100%;
       display: flex;
@@ -64,6 +76,13 @@
         align-items: flex-start;
         gap: 1rem;
 
+        img {
+          width: 2rem;
+          height: 2rem;
+          border-radius: 50%;
+          object-fit: cover;
+        }
+
         mat-form-field {
           width: 100%;
         }
@@ -78,7 +97,7 @@
         p {
           margin: 0;
           font-size: 0.75rem;
-          color: #ccc;
+          color: #909090;
         }
 
       }
