--- a/src/app/pages/overview/overview.component.scss
+++ b/src/app/pages/overview/overview.component.scss
@@ -7,6 +7,12 @@
   justify-content: center;
   align-items: center;
 
+  .logo-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .overview-actions-wrapper, {
     display: flex;
     justify-content: center;
@@ -40,27 +46,196 @@
     .search-field {
       width: 25rem;
       flex: 10;
+
+      input {
+        border-radius: 25px !important;
+      }
     }
   }
 
   .feed-wrapper {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    //gap: 2rem;
     width: 60%;
     margin-bottom: 3rem;
+
 
     .file-card {
       cursor: pointer;
       padding: 2rem 1rem;
-      border-radius: 6px;
-      border: 1px solid #727272;
+      margin: 2rem 1rem;
+      border-radius: 20px;
+      background: #D9D9D9;
       transition: all 0.25s ease-in-out;
 
+      h2 {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 0.5rem;
+        margin: 0;
+      }
+
       &:hover {
-        scale: 1.05;
-        background: #424242;
+        scale: 1.02;
+        //background: #bababa;
+        box-shadow: 0 0 10px #727272;
         transition: all 0.25s ease-in-out;
+      }
+
+      .file-header {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+
+        .main-header {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          align-items: center;
+          width: 100%;
+          margin-bottom: 1rem;
+
+          .file-title, .file-actions {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+            gap: 0.75rem;
+            margin: 0;
+
+            p {
+              display: flex;
+              flex-direction: row;
+              align-items: center;
+              gap: 0.25rem;
+            }
+          }
+        }
+
+        .user-info {
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-start;
+          align-items: center;
+          gap: 0.5rem;
+          margin: 0;
+          width: 100%;
+        }
+
+        .user-header {
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-start;
+          align-items: center;
+          gap: 0.5rem;
+          margin: 0;
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+mat-expansion-panel {
+  width: 100%;
+
+  .main-document-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1rem;
+
+    .document-description, .document-title {
+      width: 100%;
+
+      p {
+        outline: none;
+      }
+
+      .header-wrapper {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+        gap: 1rem;
+
+        mat-icon {
+          cursor: pointer;
+
+          &:hover {
+            color: #ccc;
+          }
+        }
+      }
+
+      mat-form-field {
+        width: 100%;
+      }
+    }
+
+    .dialog-actions {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+
+      button {
+      }
+    }
+
+    .comments-wrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      .comment {
+        padding: 1rem 1.25rem;
+        border-radius: 0.5rem;
+        border: 1px solid #ccc;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 1rem;
+
+
+        .comment-text {
+          width: 100%;
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-start;
+          align-items: flex-start;
+          gap: 1rem;
+
+          mat-form-field {
+            width: 100%;
+          }
+        }
+
+        .comment-date {
+          width: 100%;
+          display: flex;
+          align-items: flex-end;
+          justify-content: flex-end;
+
+          p {
+            margin: 0;
+            font-size: 0.75rem;
+            color: #ccc;
+          }
+
+        }
+
+
       }
     }
   }
