--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,7 +78,7 @@ button {
 }
 
 
-.mat-tab-label {
+mat-tab-label {
   background: transparent !important;
   opacity: 1 !important;
   transition: 150ms all ease !important;
