--- a/src/app/pages/overview/add-document/add-document.component.html
+++ b/src/app/pages/overview/add-document/add-document.component.html
@@ -12,7 +12,8 @@
         <mat-chip>
           {{passedDocument?.author}} | {{passedDocument.lastModified}}
         </mat-chip>
-        <mat-chip>{{passedDocument.numberOfUpVotes}}</mat-chip>
+        <mat-chip>
+          <mat-icon>thumb_up</mat-icon> {{passedDocument.numberOfUpVotes}}</mat-chip>
       </div>
     </div>
     <div class="comments-wrapper">
