--- a/src/app/pages/overview/overview.component.scss
+++ b/src/app/pages/overview/overview.component.scss
@@ -55,187 +55,192 @@
 
   .feed-wrapper {
     display: flex;
-    flex-direction: column;
-    //gap: 2rem;
-    width: 60%;
+    flex-direction: row;
+    gap: 2rem;
+    width: 100%;
     margin-bottom: 3rem;
 
 
-    .file-card {
-      cursor: pointer;
-      padding: 2rem 1rem;
-      margin: 2rem 1rem;
-      border-radius: 20px;
-      background: #D9D9D9;
-      transition: all 0.25s ease-in-out;
+    .tab-group {
+      width: 60%;
 
-      h2 {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 0.5rem;
-        margin: 0;
-      }
-
-      &:hover {
-        scale: 1.02;
-        //background: #bababa;
-        box-shadow: 0 0 10px #727272;
+      .file-card {
+        cursor: pointer;
+        padding: 2rem 1rem;
+        margin: 2rem 1rem;
+        border-radius: 20px;
+        background: #D9D9D9;
         transition: all 0.25s ease-in-out;
-      }
 
-      .file-header {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-
-        .main-header {
+        h2 {
           display: flex;
           flex-direction: row;
+          justify-content: flex-start;
+          align-items: center;
+          gap: 0.5rem;
+          margin: 0;
+        }
+
+        &:hover {
+          scale: 1.02;
+          //background: #bababa;
+          box-shadow: 0 0 10px #727272;
+          transition: all 0.25s ease-in-out;
+        }
+
+        .file-header {
+          display: flex;
+          flex-direction: column;
           justify-content: space-between;
           align-items: center;
-          width: 100%;
-          margin-bottom: 1rem;
 
-          .file-title, .file-actions {
+          .main-header {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+            margin-bottom: 1rem;
+
+            .file-title, .file-actions {
+              display: flex;
+              flex-direction: row;
+              justify-content: flex-start;
+              align-items: center;
+              gap: 0.75rem;
+              margin: 0;
+
+              p {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                gap: 0.25rem;
+              }
+            }
+          }
+
+          .user-info {
             display: flex;
             flex-direction: row;
             justify-content: flex-start;
             align-items: center;
-            gap: 0.75rem;
+            gap: 0.5rem;
             margin: 0;
+            width: 100%;
+          }
 
-            p {
-              display: flex;
-              flex-direction: row;
-              align-items: center;
-              gap: 0.25rem;
+          .user-header {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+            gap: 0.5rem;
+            margin: 0;
+            width: 100%;
+          }
+        }
+      }
+    }
+
+    .creation-form {
+      width: 40%;
+    }
+  }
+
+  mat-expansion-panel {
+    width: 100%;
+
+    .main-document-container {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 1rem;
+
+      .document-description, .document-title {
+        width: 100%;
+
+        p {
+          outline: none;
+        }
+
+        .header-wrapper {
+          width: 100%;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          align-items: flex-start;
+          gap: 1rem;
+
+          mat-icon {
+            cursor: pointer;
+
+            &:hover {
+              color: #ccc;
             }
           }
         }
 
-        .user-info {
-          display: flex;
-          flex-direction: row;
-          justify-content: flex-start;
-          align-items: center;
-          gap: 0.5rem;
-          margin: 0;
-          width: 100%;
-        }
-
-        .user-header {
-          display: flex;
-          flex-direction: row;
-          justify-content: flex-start;
-          align-items: center;
-          gap: 0.5rem;
-          margin: 0;
+        mat-form-field {
           width: 100%;
         }
       }
-    }
-  }
-}
 
-mat-expansion-panel {
-  width: 100%;
-
-  .main-document-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 1rem;
-
-    .document-description, .document-title {
-      width: 100%;
-
-      p {
-        outline: none;
-      }
-
-      .header-wrapper {
+      .dialog-actions {
         width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        align-items: flex-start;
-        gap: 1rem;
+        align-items: center;
 
-        mat-icon {
-          cursor: pointer;
-
-          &:hover {
-            color: #ccc;
-          }
+        button {
         }
       }
 
-      mat-form-field {
+      .comments-wrapper {
         width: 100%;
-      }
-    }
-
-    .dialog-actions {
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-
-      button {
-      }
-    }
-
-    .comments-wrapper {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-
-      .comment {
-        padding: 1rem 1.25rem;
-        border-radius: 0.5rem;
-        border: 1px solid #ccc;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
         gap: 1rem;
 
-
-        .comment-text {
-          width: 100%;
+        .comment {
+          padding: 1rem 1.25rem;
+          border-radius: 0.5rem;
+          border: 1px solid #ccc;
           display: flex;
-          flex-direction: row;
-          justify-content: flex-start;
+          flex-direction: column;
+          justify-content: center;
           align-items: flex-start;
           gap: 1rem;
 
-          mat-form-field {
+
+          .comment-text {
             width: 100%;
-          }
-        }
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: flex-start;
+            gap: 1rem;
 
-        .comment-date {
-          width: 100%;
-          display: flex;
-          align-items: flex-end;
-          justify-content: flex-end;
-
-          p {
-            margin: 0;
-            font-size: 0.75rem;
-            color: #ccc;
+            mat-form-field {
+              width: 100%;
+            }
           }
 
+          .comment-date {
+            width: 100%;
+            display: flex;
+            align-items: flex-end;
+            justify-content: flex-end;
+
+            p {
+              margin: 0;
+              font-size: 0.75rem;
+              color: #ccc;
+            }
+          }
         }
-
-
       }
     }
   }
