--- a/src/app/pages/overview/add-document/add-document.component.html
+++ b/src/app/pages/overview/add-document/add-document.component.html
@@ -1,42 +1,69 @@
-<mat-dialog-content *ngIf="filePresent">
+<mat-dialog-content class="dialog-wrapper">
   <div class="main-document-container">
-    <div class="document-title">
-      <div class="header-wrapper">
-        <h2 *ngIf="passedDocument">{{passedDocument.title}}</h2>
-        <mat-icon (click)="dialogRef.close()">close</mat-icon>
+    <div class="document-content">
+      <div class="document-title">
+        <div class="header-wrapper">
+          <h2 *ngIf="passedDocument">{{passedDocument.title}}</h2>
+          <mat-chip [ngStyle]="{'background': getColorByTag(passedDocument.category)}">
+            <b>{{passedDocument.category}}</b></mat-chip>
+          <mat-chip [ngStyle]="{'background': getColorByTag(passedDocument.category)}">
+            <b>{{passedDocument.subCategory}}</b></mat-chip>
+        </div>
+        <div class="document-description">
+          <p>{{passedDocument.description}}</p>
+        </div>
+        <div class="file-info">
+          <div class="upvote-chip" (click)="upvotePost()" [ngClass]="isLiked ? 'liked' : 'can-like'">
+            <mat-icon>thumb_up</mat-icon>
+            {{passedDocument.numberOfUpVotes}}
+          </div>
+        </div>
       </div>
-      <div class="document-description">
-        <p>{{passedDocument.description}}</p>
-      </div>
-      <div class="file-info">
-        <mat-chip>
-          {{passedDocument?.author}} | {{passedDocument.lastModified}}
-        </mat-chip>
-        <mat-chip>
-          <mat-icon>thumb_up</mat-icon> {{passedDocument.numberOfUpVotes}}</mat-chip>
+      <div class="comments-wrapper">
+        <div class="comment">
+          <div class="comment-text">
+            <mat-icon>account_circle</mat-icon>
+            <mat-form-field appearance="fill" floatLabel="always">
+                  <textarea matInput type="text" #commentInput [value]="null" [autofocus]="false"
+                            [placeholder]="passedDocument.comments ? 'Provide an answer' : 'Be the first to provide an answer'">
+                  </textarea>
+            </mat-form-field>
+          </div>
+          <div class="comment-date">
+            <button mat-flat-button color="primary" *ngIf="commentInput.value.length != 0">Comment</button>
+          </div>
+        </div>
+        <div class="comment" *ngFor="let comment of passedDocument.comments">
+          <div class="comment-text">
+            <img src="{{comment.userPic}}" alt="User picture" [matTooltip]="comment.author">
+            <p>{{comment.text}}</p>
+          </div>
+          <div class="comment-date">
+            <p>{{comment.createdDate}}</p>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="comments-wrapper">
-      <div class="comment">
-        <div class="comment-text">
-          <mat-icon>account_circle</mat-icon>
-          <mat-form-field appearance="fill" floatLabel="always">
-            <textarea matInput type="text" #commentInput [value]="null"
-                      [placeholder]="passedDocument.comments ? 'Provide an answer' : 'Be the first to provide an answer'">
-            </textarea>
-          </mat-form-field>
-        </div>
-        <div class="comment-date">
-          <button mat-flat-button color="primary" *ngIf="commentInput.value.length != 0">Comment</button>
+    <div class="document-author-wrapper">
+      <div class="author-details">
+        <img src="assets/account-pic.png" alt="account-picture">
+        <div class="author-details-text">
+          <h2>{{passedDocument.author}}</h2>
+          <p>{{passedDocument.authorDescription}}</p>
+          <p>Senior developer</p>
+          <p class="rating">
+            Rating: {{passedDocument.numberOfUpVotes}}
+            <mat-icon>thumb_up</mat-icon>
+          </p>
         </div>
       </div>
-      <div class="comment" *ngFor="let comment of passedDocument.comments">
-        <div class="comment-text">
-          <img src="{{comment.userPic}}" alt="User picture" [matTooltip]="comment.author">
-          <p>{{comment.text}}</p>
-        </div>
-        <div class="comment-date">
-          <p>{{comment.createdDate}}</p>
+      <div class="modify-history">
+        <h1>Modify history</h1>
+        <div class="history-item">
+          <h4>{{passedDocument.lastModified | date: 'dd.MM.yyyy'}}</h4>
+          <div class="history-list">
+            <p>{{passedDocument.lastModifiedBy}}</p>
+          </div>
         </div>
       </div>
     </div>
