--- a/src/app/pages/overview/add-document/add-document.component.scss
+++ b/src/app/pages/overview/add-document/add-document.component.scss
@@ -1,33 +1,126 @@
+.dialog-wrapper {
+  padding: 2rem 4rem !important;
+}
+
+.can-like {
+  cursor: pointer;
+}
+
+.liked {
+  color: #9a7bef;
+  cursor: pointer;
+}
+
 .main-document-container {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: flex-start;
-  gap: 1rem;
+  gap: 2rem;
+
+  .document-content {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .document-author-wrapper {
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+
+    .author-details, .modify-history {
+      width: 100%;
+      background: #E0E0E0;
+      padding: 0.5rem;
+      border-radius: 0.5rem;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      justify-content: center;
+      align-items: center;
+
+      .author-details-text {
+        text-align: center;
+
+        .rating {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+          gap: 0.5rem;
+        }
+      }
+
+      img {
+        width: 7rem;
+        height: 7rem;
+      }
+    }
+
+    .modify-history {
+      align-items: flex-start;
+      gap: 0.25rem;
+
+      h1 {
+        font-weight: 500;
+      }
+
+      .history-item {
+        h4 {
+          margin: 0;
+        }
+      }
+    }
+  }
 
   .document-description, .document-title {
     width: 100%;
 
-    .file-info {
+    .file-info, .upvote-chip {
       display: flex;
       flex-direction: row;
-      justify-content: flex-start;
+      justify-content: flex-end;
       align-items: center;
       gap: 0.5rem;
     }
 
     p {
       outline: none;
+      text-align: justify;
+      word-break: break-word;
     }
 
     .header-wrapper {
       width: 100%;
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
-      align-items: flex-start;
-      gap: 1rem;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 0.75rem;
+      margin: 0 0 1rem 0;
+
+      p {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 0.25rem;
+      }
+
+      b {
+        color: #FAFAFA !important;
+      }
+
+      h2 {
+        margin: 0;
+      }
 
       mat-icon {
         cursor: pointer;
