--- a/src/app/pages/overview/overview.component.html
+++ b/src/app/pages/overview/overview.component.html
@@ -1,5 +1,6 @@
 <mat-drawer-container #drawer>
   <mat-drawer position="end" class="notification-drawer">
+    <h2>Notification center</h2>
     <div *ngFor="let notification of notificationList" class="generic-notification">
       <p class="generic-notification-title">{{notification?.title}}</p>
       <p class="generic-notification-text">{{notification?.description}}</p>
@@ -16,10 +17,10 @@
       </div>
     </div>
     <div class="main-post-wrapper">
-
       <div class="logo-wrapper">
         <img src="assets/povio-logo.png" class="povio-logo" alt="logo">
       </div>
+
       <div class="overview-actions-wrapper">
         <div class="search-actions">
           <button mat-flat-button color="primary" (click)="formPanel.open(); showExpansion()">
@@ -42,9 +43,52 @@
               </mat-optgroup>
             </mat-select>
           </mat-form-field>
+          <div class="date-sort" (click)="setSortOrder(); sortDocumentsByDate()">
+            Sort by date: {{sortOrder}}
+            <mat-icon>sort</mat-icon>
+          </div>
+        </div>
+      </div>
+
+      <div class="recommended-posts">
+        <div class="posts-wrapper">
+          <div class="file-card" *ngFor="let recommendedPost of recommendedPosts"
+               (click)="openDocumentDialog(recommendedPost)">
+            <div class="file-header">
+              <div class="main-header">
+                <div class="file-title">
+                  <h2>{{recommendedPost.title}}</h2>
+                  <mat-chip [ngStyle]="{'background': getColorByTag(recommendedPost.category)}">
+                    <b>{{recommendedPost.category}}</b>
+                  </mat-chip>
+                  <mat-chip [ngStyle]="{'background': getColorByTag(recommendedPost.category)}">
+                    <b>{{recommendedPost.subCategory}}</b>
+                  </mat-chip>
+                </div>
+                <div class="file-actions">
+                  <p>
+                    <mat-icon>maps_ugc</mat-icon>
+                    {{recommendedPost.numberOfComments}}
+                  </p>
+                  <p>
+                    <mat-icon>thumb_up</mat-icon>
+                    {{recommendedPost.numberOfUpVotes}}
+                  </p>
+                </div>
+              </div>
+              <div class="user-info">
+                <p><b>{{recommendedPost.author}}</b></p>
+                <p>Last modified on: {{recommendedPost.lastModified | date: 'dd.MM.yyyy'}}</p>
+              </div>
+            </div>
+            <div class="file-description-short">
+              <p>{{recommendedPost.description}}</p>
+            </div>
+          </div>
         </div>
       </div>
       <div class="feed-wrapper">
+
         <div class="tab-group" [style]="showExpansionPanel ? 'width: 60%' : 'width: 100%'">
           <mat-tab-group mat-stretch-tabs>
             <mat-tab label="Solutions ({{uploadedSolutionFiles.length}})" autofocus>
@@ -151,7 +195,7 @@
                   </mat-radio-group>
                 </div>
                 <div class="dialog-actions">
-                  <button mat-flat-button color="primary" (click)="savePost()">
+                  <button mat-flat-button color="primary" (click)="savePost()" [disabled]="addDocumentForm.invalid">
                     <mat-icon>save</mat-icon>
                     Post
                   </button>
